* Fixed error where we couldn't process IMPORT_RES.

* Show leftover text when we throw actual args error.

* USERID_HINT didn't have the right args.

0.2.0 - 2013-02-16
==================

* Initial public release.