@@ -1,3 +1,5 @@
+* Warning when the args don't match instead of total failure.
+
 * Fixed error where we couldn't process IMPORT_RES.
 
 * Show leftover text when we throw actual args error.
